# rust-course

./: .gitignore  .output.txt  10-vec-project-3-binary-search.md  Cargo.toml  add_comment_underlines  add_comment_underlines.rs  book.toml  cookbook-prompt.txt  generate-pdf.sh  main.rs  pdf-bash.txt  pdf-style.css  project-ideas-10.txt  project-ideas-20+.txt  projects-ideas.txt  projects-prompt.txt  refactor-prompt.txt
source-code/04-generics-polymorphism/: Cargo.toml
source-code/04-generics-polymorphism/examples/: p2_binary_tree.rs  p2_generic_struct.rs  p4_gat.rs  p4_generic_params.rs  p5_blanket_impl.rs  p5_extension_trait.rs  p6_builder.rs  p6_protocol_state.rs  p8_ring_buffer.rs
source-code/04-generics-polymorphism/src/: lib.rs
source-code/05-builder-api-design/: Cargo.toml
source-code/05-builder-api-design/examples/: p1_consuming_builder.rs  p1_runtime_validation.rs  p2_typestate_builder.rs  p2_typestate_connection.rs
source-code/06-lifetime-patterns/: Cargo.toml
source-code/06-lifetime-patterns/examples/: p1_basic_lifetimes.rs  p1_static_lifetime.rs  p2_lifetime_bounds.rs  p3_hrtb.rs  p4_indices.rs  p4_pin_self_ref.rs  p6_advanced_lifetimes.rs  p6_streaming_iterator.rs
source-code/06-lifetime-patterns/src/: lib.rs
source-code/07-pattern-matching-destructuring/: Cargo.toml
source-code/07-pattern-matching-destructuring/examples/: p1_at_bindings.rs  p1_guards.rs  p2_exhaustiveness.rs  p3_if_let.rs  p3_let_else.rs  p3_while_let.rs  p4_event_sourcing.rs
source-code/08-iterator-patterns-combinators/: Cargo.toml
source-code/08-iterator-patterns-combinators/examples/: p1_counter.rs  p1_ring_buffer.rs  p2_chaining.rs  p2_fold.rs  p3_group_by.rs  p3_interleave.rs  p3_peekable.rs  p3_scan.rs  p3_take_skip_while.rs  p4a_batch_processing.rs  p4a_csv_parsing.rs  p4a_lazy_transformation.rs  p4a_merge_sorted.rs  p4a_rate_limiting.rs  p4a_sliding_window.rs  p4a_streaming_average.rs  p4b_parallel_basics.rs  p4b_parallel_bridge.rs  p4b_parallel_chunks.rs  p4b_parallel_files.rs  p4b_parallel_find.rs  p4b_parallel_map_reduce.rs  p4b_parallel_matrix.rs  p4b_parallel_scope.rs  p4b_parallel_sort.rs  p4b_parallel_word_count.rs
source-code/10-vec-slice-manipulation/: Cargo.toml
source-code/10-vec-slice-manipulation/examples/: p1_growable_buffer.rs  p1_preallocate.rs  p2_select_nth.rs  p2_slice_ops.rs  p3_windows.rs  p4_cow.rs  p5_image_processing.rs  p6_circular_buffer.rs  p6_compact_vector.rs  p6_sliding_window_max.rs
source-code/11-string-processing/: Cargo.toml
source-code/11-string-processing/examples/: p10_kmp_search.rs  p11_boyer_moore.rs  p1_string_types.rs  p2_string_builder.rs  p3_zero_copy_parsing.rs  p4_cow_html_escape.rs  p4_cow_whitespace.rs  p9_gap_buffer.rs
source-code/12-hashmap-hashset-patterns/: Cargo.toml
source-code/12-hashmap-hashset-patterns/examples/: p1_entry_api.rs  p1_lru_cache.rs  p4_btreemap.rs  p5_dashmap.rs
source-code/13-advanced-collections/: Cargo.toml
source-code/13-advanced-collections/examples/: p1_ring_buffer.rs  p1_sliding_window_max.rs  p2_task_scheduler.rs  p2_topk.rs  p3_weighted_graph.rs  p4_radix_tree.rs  p4_trie.rs
source-code/15-async-runtime/: Cargo.toml  content.txt
source-code/15-async-runtime/examples/: p1_cancellation_safe.rs  p1_chaining.rs  p1_join.rs  p1_parallel_http.rs  p1_select.rs  p1_timeout_wrapper.rs  p2_custom_stream.rs  p2_db_stream.rs  p2_map_filter.rs  p2_merge.rs  p2_rate_limiting.rs  p3_graceful_shutdown.rs  p3_joinset.rs  p3_worker_pool.rs  p4_deadline.rs  p4_graceful_timeout.rs  p4_request_cancel.rs  p4_select_default.rs  p4_select_loop.rs  p4_server_shutdown.rs  p4_timeout_retry.rs  p5_local_set.rs  p5_multi_threaded.rs  p5_runtime_agnostic.rs
source-code/16-atomic-lock-free/: Cargo.toml
source-code/16-atomic-lock-free/examples/: advanced_patterns.rs  p3_treiber_stack.rs  p5_seqlock.rs
source-code/19-unsafe/: Cargo.toml  p1_nonnull_list.rs  p1_raw_pointer_basics.rs  p2_c_functions.rs  p2_c_structs.rs  p3_maybe_uninit_array.rs  p3_partial_init.rs  p4_slice_transmute.rs  p4_type_punning.rs  p5_phantom_data.rs
source-code/22-serialization/: Cargo.toml  p1_container_attributes.rs  p1_custom_serialization.rs  p1_field_attributes.rs  p1_serde_basics.rs  p2_zero_copy.rs  p3_schema_evolution.rs  p4_format_comparison.rs  p5_streaming.rs
source-code/23-declarative-macros/: Cargo.toml  p1_macro_patterns.rs  p2_hygiene.rs
source-code/24-procedural-macros/: Cargo.toml
source-code/24-procedural-macros/my_macros/src/: lib.rs
source-code/24-procedural-macros/src/: p1_basic_derive.rs  p1_builder.rs  p1_enum_iter.rs  p1_field_access.rs  p2_log.rs  p2_struct_attr.rs  p2_timing.rs  p3_hashmap.rs  p3_sql.rs  p5_getter_setter.rs  p5_to_json.rs
source-code/26-network-programming/: Cargo.toml
source-code/26-network-programming/src/: p1_connection_pool.rs  p1_line_protocol.rs  p1_tcp_async.rs  p1_tcp_client.rs  p1_tcp_sync.rs  p1_tcp_threaded.rs  p2_udp_broadcast.rs  p2_udp_client.rs  p2_udp_reliable.rs  p2_udp_server.rs  p3_http_basic.rs  p3_http_download.rs  p3_http_headers.rs  p3_http_post.rs  p3_http_retry.rs  p4_actix.rs  p4_axum_basic.rs  p4_axum_middleware.rs  p4_axum_state.rs  p5_websocket_broadcast.rs  p5_websocket_client.rs  p5_websocket_keepalive.rs  p5_websocket_rooms.rs
source-code/30-embedded/: Cargo.toml
source-code/30-embedded/src/: lib.rs  p1_hal_drivers.rs  p2_static_allocation.rs  p3_interrupt_safe.rs  p4_scheduling.rs
source-code/src/01-memory-ownership/: Cargo.toml
source-code/src/01-memory-ownership/examples/: p10_cow_config.rs  (+20 more)
source-code/src/02-struct-enum/: Cargo.toml  README.md
source-code/src/03-trait-design/: Cargo.toml
source-code/src/09-error-handling-architecture/: Cargo.toml
source-code/src/14-threading-patterns/: Cargo.toml
source-code/src/17-parallel-algorithms/: Cargo.toml
source-code/src/18-reference/: Cargo.toml
source-code/src/18-smart/: Cargo.toml
source-code/src/20-synchronous/: Cargo.toml
source-code/src/21-async-io/: Cargo.toml
source-code/src/25-ffi-c-interop/: Cargo.toml
source-code/src/27-database-patterns/: Cargo.toml
(+818 files in other folders)
