[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
tokio = { version = "1.45.0", features = ["full"] } # We need tokio for the async runtime
http-body-util = "0.1.3" # For Full<Bytes>
hyper-util = { version = "0.1.10", features = ["full"] } # For service_fn and server components
tokio-util = { version = "0.7.15", features = ["compat"] }
path-clean = "1.0.1"
bytes = "1.10.1"
csv = "1.3.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
lazy_static = "1.5.0"
html-escape = "0.2.13"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"

[[bin]]
name = "complete_09_web_scraper"
path = "projecta/src/bin/complete_09_web_scraper.rs"

[[bin]]
name = "complete_10_generics_queue"
path = "projecta/src/bin/complete_10_generics-queue.rs"

[[bin]]
name = "complete_10_csv_processor"
path = "projecta/src/bin/complete_10_csv_processor.rs"

[[bin]]
name = "complete_10_vec_timeseries"
path = "projecta/src/bin/complete_10_vec_timeseries.rs"

[[bin]]
name = "complete_10_vec_binary_search"
path = "projecta/src/bin/complete_10_vec_binary_search.rs"
