[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
tokio = { version = "1.45.0", features = ["full"] } # We need tokio for the async runtime
http-body-util = "0.1.3" # For Full<Bytes>
hyper-util = { version = "0.1.10", features = ["full"] } # For service_fn and server components
tokio-util = { version = "0.7.15", features = ["compat"] }
path-clean = "1.0.1"
bytes = "1.10.1"
csv = "1.3.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
lazy_static = "1.5.0"
html-escape = "0.2.13"
walkdir = "2.5.0"
dashmap = "5.5"
sha2 = "0.10"
filetime = "0.2"
glob = "0.3"
rustc-hash = "1.1"
crossbeam = "0.8"
scraper = "0.18"
url = "2.5"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4"] }
image = "0.25.9"
num_cpus = "1.17.0"
# pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
itertools = "0.14"

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"

[[bin]]
name = "complete_09_web_scraper"
path = "projecta/src/bin/complete_09_web_scraper.rs"

[[bin]]
name = "complete_10_generics_queue"
path = "projecta/src/bin/complete_10_generics-queue.rs"

[[bin]]
name = "complete_10_csv_processor"
path = "projecta/src/bin/complete_10_csv_processor.rs"

[[bin]]
name = "complete_10_vec_timeseries"
path = "projecta/src/bin/complete_10_vec_timeseries.rs"

[[bin]]
name = "complete_10_vec_binary_search"
path = "projecta/src/bin/complete_10_vec_binary_search.rs"

[[bin]]
name = "complete_11_string_logparser"
path = "projecta/src/bin/complete_11_string_logparser.rs"

[[bin]]
name = "complete_11_string_editor"
path = "projecta/src/bin/complete_11_string_editor.rs"

[[bin]]
name = "complete_07_network_packets"
path = "projecta/src/bin/complete_07_network_packets.rs"

[[bin]]
name = "complete_11_string_search"
path = "projecta/src/bin/complete_11_string_search.rs"

[[bin]]
name = "complete_12_hashmap_analytics"
path = "projecta/src/bin/complete_12_hashmap_analytics.rs"

[[bin]]
name = "complete_12_hashmap_hash_functio"
path = "projecta/src/bin/complete_12_hashmap_hash_functio.rs"

[[bin]]
name = "complete_12_hashmap_cache"
path = "projecta/src/bin/complete_12_hashmap_cache.rs"

[[bin]]
name = "complete_12_collections_autocomplete"
path = "projecta/src/bin/complete_13_collections_autocomplete.rs"

[[bin]]
name = "complete_13_collections_queue"
path = "projecta/src/bin/complete_13_collections_queue.rs"

[[bin]]
name = "complete_13_collections_scheduling"
path = "projecta/src/bin/complete_13_collections_scheduling.rs"

[[bin]]
name = "complete_14_image_processor"
path = "projecta/src/bin/complete_14_image_processor.rs"

[[bin]]
name = "complete_14_patterns"
path = "projecta/src/bin/complete_14_prod_cons.rs"

[[bin]]
name = "complete_14_share_counter"
path = "projecta/src/bin/complete_14_share_counter.rs"

[[bin]]
name = "complete_15_webscraper"
path = "projecta/src/bin/complete_15_webscraper.rs"

[[bin]]
name = "complete_15_task_scheduler"
path = "projecta/src/bin/complete_15_task_scheduler.rs"

[[bin]]
name = "complete_15_image-processing"
path = "projecta/src/bin/complete_15_image-processing.rs"

[[bin]]
name = "complete_16_atomic_metrics"
path = "projecta/src/bin/complete_16_atomic_metrics.rs"


[[bin]]
name = "complete_16_atomic_treiber_stack"
path = "projecta/src/bin/complete_16_atomic_treiber_stack.rs"

[[bin]]
name = "complete_16_atomic_ring_buffer"
path = "projecta/src/bin/complete_16_atomic_ring_buffer.rs"

[[bin]]
name = "complete_17_parallel_map_reduce"
path = "projecta/src/bin/complete_17_parallel_map_reduce.rs"

[[bin]]
name = "complete_18_pointers_rcdom"
path = "projecta/src/bin/complete_18_pointers_rcdom.rs"

[[bin]]
name = "complete_18_pointers_objectpool"
path = "projecta/src/bin/complete_18_pointers_objectpool.rs"

[[bin]]
name = "complete_17_parallel_kafka"
path = "projecta/src/bin/complete_17_parallel_kafka.rs"

[[bin]]
name = "complete_19_cpu_optimization"
path = "projecta/src/bin/complete_19_cpu_optimization.rs"

[[bin]]
name = "complete_18_smart_object_pool"
path = "projecta/src/bin/complete_18_pointer_object_pool.rs"

[[bin]]
name = "complete_18_pointer_cow"
path = "projecta/src/bin/complete_18_pointer_cow.rs"

[[bin]]
name = "complete_20_rsync"
path = "projecta/src/bin/complete_20_rsync.rs"

[[bin]]
name = "complete_20_version_control"
path = "projecta/src/bin/complete_20_version_control.rs"

[[bin]]
name = "complete_20_build_system"
path = "projecta/src/bin/complete_20_build_system.rs"


[[bin]]
name = "complete_23_macros_query_builder"
path = "projecta/src/bin/complete_23_macros_query_builder.rs"



[[bin]]
name = "complete_24_spring_framework"
path = "projecta/src/bin/complete_24_spring_framework.rs"

[[bin]]
name = "complete_28_testing-coverage"
path = "src/bin/complete_28_testing-coverage.rs"

[[bin]]
name = "complete_28_testing-mutation"
path = "src/bin/complete_28_testing-mutation.rs"

[[bin]]
name = "complete_28_testing-property"
path = "src/bin/complete_28_testing-property.rs"

[[bin]]
name = "complete_29_profiler"
path = "src/bin/complete_29_profiler.rs"


[[bin]]
name = "check_complete"
path = "projecta/src/bin/check_rust_in_markdown.rs"
